Fixed the resolution of the logo, and fixed logo animations on starting of the application

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
-    <string name="app_name">Touch Point</string>
+    <string name="app_name">Media Icon</string>
     <string name="facebook_app_id">360259361089404</string>
     <string name="fb_login_protocol_scheme">fb360259361089404</string>
-    <string name="title_activity_main2">Touch Point</string>
+    <string name="title_activity_main2">Media Icon</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
